[package]
authors = ["Noah Grant <noahdgrant@gmail.com>"]
name = "elevator"
edition = "2021"
readme = "README.md"
version = "0.1.0"

[dependencies]
bxcan = "0.7.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
critical-section = "1.1.2"
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-semihosting = "0.6.0"
stm32f3xx-hal = {version = "0.10.0", features = ["stm32f303xe", "rt", "can", "ld"]}
systick-monotonic = "1.0.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
